--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,13 @@ quarkus.application.name=apartment-api
 quarkus.http.host=localhost
 quarkus.http.cors=true 
 quarkus.http.cors.methods=GET, POST, PUT, DELETE
-# quarkus.http.cors.headers=X-Custom 
-# quarkus.http.cors.exposed-headers=Content-Disposition 
-# quarkus.http.cors.access-control-max-age=24H 
-quarkus.http.cors.headers=Access-Control-Allow-Origin
-quarkus.http.cors.origins=http://localhost:8081, http://localhost:8080
+quarkus.http.cors.headers=Content-Type, Authorization, Access-Control-Allow-Origin // Add Content-Type and optionally Authorization
 quarkus.http.cors.access-control-allow-credentials=true
 %dev.quarkus.http.cors.origins=/.*/
 
+# quarkus.http.cors.headers=X-Custom 
+# quarkus.http.cors.exposed-headers=Content-Disposition 
+# quarkus.http.cors.access-control-max-age=24H 
 # quarkus.ssl.native=false
 
 quarkus.hibernate-orm.database.generation=drop-and-create
